--- a/senior.html
+++ b/senior.html
@@ -416,6 +416,30 @@
      </p>
     </div>
    </div>
+<!--   SHANE BIO-->
+   <div class="our-team-content">
+    <div class="our-team-image-column">
+     <img alt="Shane Scarinci" class="img-responsive" src="images/shane.jpeg"/>
+    </div>
+    <div class="our-team-text-column text-column">
+     <img class="our-team-text-img" src="images/shane.jpeg"/>
+     <h3>
+      Shane Scarinci
+     </h3>
+     <h5>
+      Research & Development
+     </h5>
+     <p>
+      Shane has over 25 years’ experience in senior corporate and operational roles within government, gaining extensive experience in managing major crime scene & forensic investigations. Shane has held leadership roles in Disaster Management having been deployed both Nationally and Internationally to major disasters, including the Christchurch earthquakes and the Grantham floods. Shane has specific experience in interpreting legislation and negotiating with stakeholders and government departments across multiple states, taking a strategic approach to drive effective governance. Shane has a proven record of accomplishment in leading and managing large teams to deliver outcomes. As part of his leadership roles, Shane has managed several NATA accredited laboratories ensuring compliance with Quality Management Systems and ISO standards. Shane leads and drives the delivery of operational excellence through the management of health, safety and environmental (HSE) systems and risks.
+     </p>
+     <p>
+      For the past 12 months Shane has performed the role as the General Manager – Research and Development for ESI Asia Pacific, leading all aspects of product development, supply chain firming, and product optimisation.
+     </p>
+     <p>
+      Shane holds a BAppSci (Medical Biotechnology), Advanced Diplomas in Leadership and Management, Workplace Health and Safety, Public Safety and Forensic Investigations, as well as a Certificate IV in Training and Assessment.
+     </p>
+    </div>
+   </div>
   </main>
   <footer>
    <section class="contact">
