products and our-batteries

--- a/our-batteries.html
+++ b/our-batteries.html
@@ -317,19 +317,19 @@
   <main class="content-block">
    <div class="text-column chemistry-header">
     <h1>
-     A Safe, reliable and sustainable Battery System
+     A Safe, reliable and sustainable battery system
     </h1>
-   </div>
    <p>
-    ESIAP will deliver from its Australian facilities Iron Flow batteries. The device consists of iron, salt and water chemistry and can be either deployed in containers or in a large scale grid connected warehouse.
+    ESI’s iron flow batteries comprise iron, salt and water chemistry and can be deployed either in containers, or in a large-scale grid-connected warehouse. The device consists of iron, salt and water chemistry and can be either deployed in containers or in a large scale grid connected warehouse.
    </p>
+   </div>
    <div class="text-column chemistry-header">
     <h3>
-     Battery Capability
+     Battery capability
     </h3>
     <ul>
      <li>
-      6 - 14 Hours Energy Storage
+      6 - 14 hours energy storage
      </li>
      <li>
       Module design allows for 400KWh to 1GWh+ installation
@@ -341,10 +341,10 @@
       25+ year lifetime
      </li>
      <li>
-      Munich RE 10 year warranty
+      Munich Re 10-year warranty
      </li>
      <li>
-      Wide operating range - 5°C to 50°C
+      Wide operating range from 5°C to 50°C
      </li>
      <li>
       Non-toxic, non-flammable, 100% recyclable
