--- a/products.html
+++ b/products.html
@@ -320,10 +320,6 @@
      Our Products
     </h1>
    </div>
-   <!--
-OUR SERVICES
-
--->
    <p>
     ESI manufactures and distributes iron flow batteries that allow large-scale energy storage for wholesale electricity generators, energy retailers, and commercial and industrial (C&amp;I) customers.
    </p>
@@ -370,13 +366,13 @@ OUR SERVICES
     </h1>
    </div>
    <p>
-    We supply, install and provides on-going maintenance for our customers of iron flow batteries.
+    We supply, install and provide on-going maintenance for our customers of iron flow batteries.
    </p>
    <p>
-    Importantly, the technology is backed by leading global re-insurance company Munich Re, which mitigates risk for ESI’s customers.
+    Importantly, the technology is backed by leading global re-insurance company Munich Re which mitigates risk for ESI’s customers.
    </p>
    <p>
-    Partnering with Munich RE, we have launched an industry-first insurance coverage for our battery flow technology. This world-first innovative policy means that our long-duration storage solutions are now baked by a full 10-year performance guarantee, regardless of project size or where it's located.
+    Partnering with Munich Re, we have launched an industry-first insurance coverage for our battery flow technology. This world-first innovative policy means that our long-duration storage solutions are now baked by a full 10-year performance guarantee, regardless of project size or where it's located.
    </p>
    <!--   <div class="text-column chemistry-header">-->
    <!--    <h3>-->
