finished products and services sub catagory

--- a/chemistry.html
+++ b/chemistry.html
@@ -317,29 +317,29 @@
   <main class="content-block">
    <div class="text-column chemistry-header">
     <h1>
-     Technology Overview
+     Technology overview
     </h1>
    </div>
    <div class="text-column">
     <p>
-     The Iron Flow battery consists of iron, salt and water chemistry and can be either deployed in containers or in a large-scale grid-connected warehouse.
+     The iron flow battery consists of iron, salt and water chemistry and can be either deployed in containers or in a large-scale grid-connected warehouse.
     </p>
    </div>
    <div class="text-column chemistry-header">
     <h3>
-     Iron Chloride Flow Battery
+     Iron chloride flow battery
     </h3>
    </div>
    <div class="text-column">
     <ul>
      <li>
-      Also known as Redox Flow Battery (reduction-oxidation)
+      Also known as a redox flow battery (reduction-oxidation)
      </li>
      <li>
       Electrochemical storage device with unlimited charge/discharge cycles
      </li>
      <li>
-      Electrical energy drives chemical change in the electrolyte, which flows through electrochemical cell
+      Electrical energy drives chemical change in the electrolyte, which flows through an electrochemical cell
      </li>
     </ul>
     <img alt="Iron Flow Chemistry" class="img-fluid" src="images/Chemistry.jpg"/>
