--- a/solutions.html
+++ b/solutions.html
@@ -334,7 +334,7 @@
      <img alt="Utility" class="our-team-text-img" src="images/P_S-Solutions-Utility-Icon.svg" style="max-width: 137px;"/>
      <p>
       Large scale installations of medium duration (10 hour) storage from 20MW to 1GW integrating into existing
-                Transmission connections enabling an orderly transition from fossil fuel generation to Renewable sources
+                transmission connections enabling an orderly transition from fossil fuel generation to renewable sources
      </p>
     </div>
    </div>
@@ -345,7 +345,7 @@
     <div class="text-column our-team-text-column chemistry-header">
      <img alt="Transmission" class="our-team-text-img" src="images/P_S-Solutions-Transmission-Icon.svg" style="max-width: 137px;"/>
      <h3>
-      Transmission/Distribution
+      Transmission/distribution
      </h3>
      <p>
       The advent of intermittent generation places great strains on the grid, by locating ESI storage in constraint
@@ -378,12 +378,12 @@
     <div class="text-column our-team-text-column chemistry-header">
      <img alt="Commercial" class="our-team-text-img" src="images/P_S-Solutions-Rural-Icon.svg" style="max-width: 137px;"/>
      <h3>
-      Rural, Remote and Island
+      Rural, remote and island
      </h3>
      <p>
       De-carbonisation of the rural, remote and island networks are an integral part of a zero carbon emission grid.
       Scalable stand-alone power systems that can integrate renewable generation, storage, load management
-      systems and back up generation capacity (diesel generation, compressed air, Hydrogen fuel cells) can be
+      systems and back up generation capacity (diesel generation, compressed air, hydrogen fuel cells) can be
       adapted to meet the largest to the smallest of load requirements.
      </p>
     </div>
