Update to production metric
Update to 2026 production metric to accurately reflect targets.

--- a/about.html
+++ b/about.html
@@ -342,7 +342,7 @@
     We are also investing in the manufacture of small, modular distributed energy storage units that can be installed in low voltage networks and microgrids, and behind the meter installations for C&amp;I customers.
    </p>
    <p>
-    By 2026, ESI will deliver 400 megawatts (MW) of energy storage each year for the next 15 years — that is 6 gigawatts (GW) of energy storage, or 20 per cent of Australia's renewable energy needs.
+    By the end of 2026, ESI will produce 200MW &vert; 1.6GWh of energy storage annually. With an ambition to expand to 400MW &vert; 3.2GWh.
    </p>
    <p>
     <!--    [when created, this will link to the NBTC page]-->
