Update to production metric
Update to 2026 production target metric to accurately reflect current output goal.

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
      We have already installed 10 grid-scale batteries at a Queensland facility, helping to secure Queensland’s clean energy future, with a further 10 batteries en route.
     </p>
     <p>
-     By the end of 2026, ESI aims to deliver up to 400 megawatts (MW) of energy storage each year for the next 15 years.
+     By the end of 2026, ESI will produce 200MW &vert; 1.6GWh of energy storage annually. With an ambition to expand to 400MW &vert; 3.2GWh.
     </p>
    </div>
    <div class="media-video-small">
