--- a/products.html
+++ b/products.html
@@ -324,7 +324,7 @@
     ESI manufactures and distributes iron flow batteries that allow large-scale energy storage for wholesale electricity generators, energy retailers, and commercial and industrial (C&amp;I) customers.
    </p>
    <p>
-    ESI’s iron flow batteries have a 10 to 14-hour storage capacity and lifecycle of 25 years — something that is not provided by other battery technologies.
+    ESI’s iron flow batteries have an 8 to 12-hour storage capacity and lifecycle of 25 years — something that is not provided by other battery technologies.
    </p>
    <!--   [Insert an image of the energy centre – preferably on the right hand side of the page.]-->
    <p>
