--- a/our-batteries.html
+++ b/our-batteries.html
@@ -320,8 +320,7 @@
      A Safe, reliable and sustainable battery system
     </h1>
    <p>
-    ESI’s iron flow batteries comprise iron, salt and water chemistry and can be deployed either in containers, or in a large-scale grid-connected warehouse. The device consists of iron, salt and water chemistry and can be either deployed in containers or in a large scale grid connected warehouse.
-   </p>
+    ESI’s iron flow batteries comprise iron, salt and water chemistry and can be deployed either in containers, or in a large-scale grid-connected warehouse.
    </div>
    <div class="text-column chemistry-header">
     <h3>
@@ -329,7 +328,7 @@
     </h3>
     <ul>
      <li>
-      6 - 14 hours energy storage
+      8-12 hours energy storage
      </li>
      <li>
       Module design allows for 400KWh to 1GWh+ installation
