--- a/contact.html
+++ b/contact.html
@@ -338,7 +338,7 @@
      Address
     </h2>
     <p>
-     139B Latrobe Terrace,
+     139 Latrobe Terrace,
     </p>
     <p>
      Paddington 4064
@@ -355,7 +355,7 @@
      Working Time
     </h2>
     <p>
-     Monday - Friday — 08:00 - 16:00
+     Monday - Friday — 08:30 - 16:30
     </p>
     <p>
      Saturday — Closed
@@ -400,18 +400,18 @@
       Stay up to date and follow us
      </h3>
      <div class="footer-icon-container contact-text">
-      <a href="https://twitter.com/ESIAsiaPacific">
-       <img class="footer-icon" src="icons/2021%20Twitter%20logo%20-%20white.png"/>
+      <a href="https://x.com/ESIAsiaPacific">
+       <img class="footer-icon" src="icons/x-logo-white.png"/>
       </a>
       <a href="https://facebook.com/ESIAsiaPacific">
-       <img class="footer-icon" src="icons/f_logo_RGB-White_512.png"/>
+       <img class="footer-icon" src="icons/Facebook_Logo_Secondary.png"/>
       </a>
       <a href="https://www.linkedin.com/company/81527417">
-       <img class="footer-icon" src="icons/In-White-128.png"/>
+       <img class="footer-icon" src="icons/LinkedIn-White-128.png"/>
       </a>
      </div>
-     <br/>
-     <a class="footer-contact-us" href="/contact">
+     <br />
+     <a href="/contact" class="footer-contact-us">
       <h3 class="contact-text">
        Contact Us
       </h3>
@@ -422,7 +422,7 @@
   <section class="footer-background">
    <div class="footer navbar-expand-lg navbar">
     <span class="mr-auto">
-     © 2022 All rights reserved.
+     © 2024 All rights reserved.
     </span>
    </div>
   </section>
