--- a/email_template.html
+++ b/email_template.html
@@ -77,7 +77,7 @@
                         font-size: 12px;
                         font-style: normal;
                         font-weight: 500;">
-      2/11 Morrison Close, Mansfield, QLD 4112
+      139 Latrobe Terrace, Paddington 4064, QLD
                         Australia
      </span>
     </p>
