--- a/transition.html
+++ b/transition.html
@@ -329,7 +329,7 @@
    <section class="contact">
     <div class="footer-information">
      <a class="footer-logo" href="/">
-      <img alt="ESI Asia Pacific Pty Ltd" class="navbar-logo" src="images/ESIAP-Logo-Reversed.png"/>
+      <img alt="ESI Asia Pacific Pty Ltd" class="navbar-logo" src="images/Feature-Benefit-Advantage.jpg"/>
      </a>
      <div class="footer-contacts">
       <h3 class="contact-text">
