--- a/transition.html
+++ b/transition.html
@@ -322,14 +322,14 @@
     <p>
      ESI’s technology is transforming the value proposition for long duration energy storage.
     </p>
-    <img alt="Features and advantages" class="img-fluid" src="images/Energy-Transition.png"/>
+    <img alt="Features and advantages" class="img-fluid" src="images/Feature-Benefit-Advantage.jpg"/>
    </div>
   </main>
   <footer>
    <section class="contact">
     <div class="footer-information">
      <a class="footer-logo" href="/">
-      <img alt="ESI Asia Pacific Pty Ltd" class="navbar-logo" src="images/Feature-Benefit-Advantage.jpg"/>
+      <img alt="ESI Asia Pacific Pty Ltd" class="navbar-logo" src="images/ESIAP-Logo-Reversed.png"/>
      </a>
      <div class="footer-contacts">
       <h3 class="contact-text">
