--- a/careers.html
+++ b/careers.html
@@ -354,7 +354,10 @@
       <img class="footer-icon" src="icons/Facebook_Logo_Secondary.png"/>
      </a>
      <a href="https://www.linkedin.com/company/81527417">
-      <img class="footer-icon" src="icons/LinkedIn-White-128.png"/>
+      <img class="footer-icon" src="icons/LinkedIn-White-128.png"/>       
+     </a>
+       <a href="https://www.youtube.com/@ESI-AP">
+        <img class="footer-icon" src="icons/Youtube_logo_pms_mono_WHITE.png"/>
      </a>
     </div>
     <br />
