--- a/maryborough.html
+++ b/maryborough.html
@@ -328,13 +328,13 @@
      </div>
      <img alt="Sod Turning" src="images/Sod%20Turning%201.jpg" style="width: 100%; margin-left: auto; margin-right: auto"/>
      <p>
-      Work on our $70 million Maryborough facility officially started on Wednesday, 6 July 2022.
+      Work on access roads for our $70 million Maryborough facility officially started on Wednesday, 6 July 2022.
      </p>
      <p>
-      Deputy Premier the Hon Dr Steven Miles MP, State Member for Maryborough Bruce Saunders MP, Fraser Coast Regional Council Mayor Cr George Seymour and Butchulla elder Eleanor Currie were on hand to officiate at a sod turning ceremony to mark the start of construction.
+      Deputy Premier the Hon Dr Steven Miles MP, State Member for Maryborough Bruce Saunders MP, Fraser Coast Regional Council Mayor Cr George Seymour and Butchulla elder Eleanor Currie were on hand to officiate at a sod turning ceremony to mark the event.
      </p>
      <p>
-      Once complete in 2024, the Maryborough facility will manufacture and distribute iron flow batteries that allow large-scale energy storage for wholesale electricity generators, energy retailers, and commercial and industrial customers.
+      Once complete in 2025, the Maryborough facility will manufacture and distribute iron flow batteries that allow large-scale energy storage for wholesale electricity generators, energy retailers, and commercial and industrial customers.
      </p>
      <div class="slide-container" style="margin-left: auto; margin-right: auto">
       <span class="prev banner-button event-button" onclick="plusSlide(-1)">
