--- a/maryborough.html
+++ b/maryborough.html
@@ -323,7 +323,7 @@
     <div class="text-column">
      <div class="chemistry-header">
       <h1>
-       Maryborough
+       Maryborough battery manufacturing plant
       </h1>
      </div>
      <img alt="Sod Turning" src="images/Sod%20Turning%201.jpg" style="width: 100%; margin-left: auto; margin-right: auto"/>
