--- a/maryborough.html
+++ b/maryborough.html
@@ -146,7 +146,7 @@
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
         <li>
          <a class="dropdown-item btn btn-sub" href="/maryborough">
-          Maryborough
+          Maryborough battery plant
          </a>
         </li>
         <!--        <li><div class="dropdown-divider"></div></li>-->
@@ -328,13 +328,25 @@
      </div>
      <img alt="Sod Turning" src="images/Sod%20Turning%201.jpg" style="width: 100%; margin-left: auto; margin-right: auto"/>
      <p>
-      Work on access roads for our $70 million Maryborough facility officially started on Wednesday, 6 July 2022.
+      <b>Construction of ESI’s Maryborough manufacturing plant for grid-scale batteries began in September 2024. The $70 million facility is expected to be completed by the end of 2025.</b>
      </p>
      <p>
-      Deputy Premier the Hon Dr Steven Miles MP, State Member for Maryborough Bruce Saunders MP, Fraser Coast Regional Council Mayor Cr George Seymour and Butchulla elder Eleanor Currie were on hand to officiate at a sod turning ceremony to mark the event.
+      Construction of the facility is supported by a $25 million investment from the Queensland Government and $40 million from a UK-based investment fund.
      </p>
      <p>
-      Once complete in 2025, the Maryborough facility will manufacture and distribute iron flow batteries that allow large-scale energy storage for wholesale electricity generators, energy retailers, and commercial and industrial customers.
+      Wide Bay-Burnett company <a href="https://idcconstruct.com.au/" target="_blank">IDC Construct</a> is the lead construction contractor, supported by a range of suppliers and contractors based in the region.
+     </p>
+     <p>
+      When fully operational by mid-2029, the plant will deliver 400 megawatts of energy storage annually – enough to power a town the size of Toowoomba. It will also have created up to 273 full-time jobs.
+     </p>
+     <p>
+      Key components for the batteries will be sourced from throughout regional Queensland. This includes manufacture of the medium of energy storage in iron flow batteries, called electrolyte, in a joint venture with Townsville’s <a href="https://www.clevelandbaychemco.com.au/" target="_blank">Cleveland Bay Chemical Company</a>.
+     </p>
+     <p>
+      The iron flow batteries manufactured in Maryborough will enable large-scale energy storage for wholesale electricity generators, energy retailers, and commercial and industrial customers.
+     </p>
+     <p>
+      Follow our construction progress via the timelapse gallery below, updated fortnightly to showcase milestones at Australia’s first manufacturing plant for grid-scale batteries.
      </p>
      <div class="slide-container" style="margin-left: auto; margin-right: auto">
       <span class="prev banner-button event-button" onclick="plusSlide(-1)">
