--- a/maryborough.html
+++ b/maryborough.html
@@ -326,7 +326,7 @@
        Maryborough battery manufacturing plant
       </h1>
      </div>
-     <img alt="Sod Turning" src="images/Sod%20Turning%201.jpg" style="width: 100%; margin-left: auto; margin-right: auto"/>
+     <img alt="Maryborough construction crew photo" src="images/DSC0404.jpg" style="width: 100%; margin-left: auto; margin-right: auto"/>
      <p>
       <b>Construction of ESI’s Maryborough manufacturing plant for grid-scale batteries began in September 2024. The $70 million facility is expected to be completed by the end of 2025.</b>
      </p>
@@ -352,9 +352,8 @@
       <span class="prev banner-button event-button" onclick="plusSlide(-1)">
        ❮
       </span>
-      <img alt="Maryborough Facility 1" class="event-slide" src="/images/ESI%20-%20Maryborough%20facility%201.jpg"/>
-      <img alt="Maryborough Facility 2" class="event-slide" src="/images/ESI%20-%20Maryborough%20facility%202.jpg"/>
-      <img alt="Maryborough Facility 3" class="event-slide" src="/images/ESI%20-%20Maryborough%20facility%203.jpg"/>
+      <img alt="Maryborough Timelapse Camera 1" class="event-slide" src="/images/ESI-Maryborough-site-update-1_22.10.24.jpg"/>
+      <img alt="Maryborough Timelapse Camera 2" class="event-slide" src="/images/ESI-Maryborough-site-update-1_22.10.24.jpg"/>
       <span class="next banner-button event-button" onclick="plusSlide(1)">
        ❯
       </span>
@@ -365,9 +364,7 @@
        </span>
        <span class="event-dot" onclick="currentSlide(2)">
        </span>
-       <span class="event-dot" onclick="currentSlide(3)">
        </span>
-      </span>
      </div>
      <!--    <img alt="Features and advantages" class="img-fluid" src="images/Energy-Transition.png"/>-->
     </div>
