--- a/maryborough.html
+++ b/maryborough.html
@@ -323,7 +323,7 @@
     <div class="text-column">
      <div class="chemistry-header">
       <h1>
-       Maryborough battery manufacturing plant
+       Maryborough battery plant
       </h1>
      </div>
      <img alt="Maryborough construction crew photo" src="images/DSC0404.jpg" style="width: 100%; margin-left: auto; margin-right: auto"/>
@@ -353,7 +353,7 @@
        ❮
       </span>
       <img alt="Maryborough Timelapse Camera 1" class="event-slide" src="/images/ESI-Maryborough-site-update-2_22.10.24.jpg"/>
-      <img alt="Maryborough Timelapse Camera 2" class="event-slide" src="/images/ESI-Maryborough-site-update-1_22.10.24.jpg"/>
+      <img alt="Maryborough Timelapse Camera 2" class="event-slide" src="/images/ESI-Maryborough-site-update-1_10.10.24.jpg"/>
       <span class="next banner-button event-button" onclick="plusSlide(1)">
        ❯
       </span>
