--- a/about.html
+++ b/about.html
@@ -144,7 +144,7 @@
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
         <li>
          <a class="dropdown-item btn btn-sub" href="/maryborough">
-          Maryborough
+          Maryborough battery plant
          </a>
         </li>
         <!--        <li><div class="dropdown-divider"></div></li>-->
@@ -276,7 +276,7 @@
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
         <li>
          <a class="dropdown-item btn btn-sub" href="/maryborough">
-          Maryborough
+          Maryborough battery plant
          </a>
         </li>
         <!--         <li><div class="dropdown-divider"></div></li>-->
