--- a/about.html
+++ b/about.html
@@ -336,7 +336,7 @@
 <!--    <a href="/products">-->
 <!--     large-scale energy storage-->
 <!--    </a>-->
-    for wholesale electricity generators, energy retailers, and commercial and industrial (C&amp;I) customers. Construction has started on our manufacturing facility at Maryborough.
+    for wholesale electricity generators, energy retailers, and commercial and industrial (C&amp;I) customers. Construction has started on our manufacturing facility at <a href="/maryborough">Maryborough</a>.
    </p>
    <p>
     We are also investing in the manufacture of small, modular distributed energy storage units that can be installed in low voltage networks and microgrids, and behind the meter installations for C&amp;I customers.
