--- a/environment.html
+++ b/environment.html
@@ -143,8 +143,8 @@
        </a>
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
         <li>
-         <a class="dropdown-item btn btn-sub" href="/maryborough">
-          Maryborough
+         <a class="dropdown-item btn btn-sub" href="/">
+          
          </a>
         </li>
         <!--        <li><div class="dropdown-divider"></div></li>-->
@@ -275,8 +275,8 @@
        </a>
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
         <li>
-         <a class="dropdown-item btn btn-sub" href="/maryborough">
-          Maryborough
+         <a class="dropdown-item btn btn-sub" href="/">
+          
          </a>
         </li>
         <!--         <li><div class="dropdown-divider"></div></li>-->
@@ -338,7 +338,7 @@
     <div class="text-column our-team-text-column">
      <img alt="Handshake" class="our-team-text-img" src="images/About-Handshake.svg"/>
      <p>
-      ESI provides a significant social and economic boost to the Australian community. Initially, we are investing up to $70 million to build a manufacturing hub in Maryborough. An economic impact assessment conducted by leading professional services firm EY shows that ESI’s operations will boost Gross State Product (GSP) by $676 million over the first 20 years of operation, with the majority of that benefit occurring in the first five years. When fully operational in 2026, ESI we will have up to 500 highly skilled employees and contractors working at our facilities throughout regional Queensland.
+      ESI provides a significant social and economic boost to the Australian community. Initially, we are investing up to $70 million to build a grid-scale battery manufacturing plant in <a href="/maryborough">Maryborough</a>. Construction of the Maryborough manufacturing plant began in September 2024. An economic impact assessment conducted by leading professional services firm EY shows that ESI’s operations will boost Gross State Product (GSP) by $676 million over the first 20 years of operation, with the majority of that benefit occurring in the first five years. When fully operational in 2026, ESI we will have up to 500 highly skilled employees and contractors working at our facilities throughout regional Queensland.
      </p>
     </div>
    </div>
