--- a/about.html
+++ b/about.html
@@ -354,6 +354,19 @@
    <p>
     ESI plans to export renewable energy battery storage solutions to the Asia Pacific region within the next six years.
    </p>
+   <div class="media-video-small">
+    <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" frameborder="0" height="169" src="https://www.youtube.com/embed/PgAKWZ_o_So?si=IGd6tT0IOWqBvPWj" style="margin:auto; margin-top: 30px" title="YouTube video player" width="300">
+    </iframe>
+   </div>
+   <div class="media-video-medium">
+    <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" frameborder="0" height="315" src="https://www.youtube.com/embed/PgAKWZ_o_So?si=IGd6tT0IOWqBvPWj" style="margin:auto; margin-top: 30px" title="YouTube video player" width="560">
+    </iframe>
+   </div>
+   <div class="media-video-large">
+    <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" frameborder="0" height="440" src="https://www.youtube.com/embed/PgAKWZ_o_So?si=IGd6tT0IOWqBvPWj" style="margin:auto; margin-top: 30px" title="YouTube video player" width="780">
+    </iframe>
+   </div>
+   <div class="text-column"></div>
   </main>
   <footer>
    <section class="contact">
