--- a/products.html
+++ b/products.html
@@ -320,6 +320,18 @@
      Our Products
     </h1>
    </div>
+         <div class="media-video-small">
+    <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" frameborder="0" height="169" src="https://www.youtube.com/embed/lF9JY7NVBVk?si=fhDYjDGO7WLeQjcM" style="margin:auto; margin-top: 30px" title="YouTube video player" width="300">
+    </iframe>
+   </div>
+   <div class="media-video-medium">
+    <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" frameborder="0" height="315" src="https://www.youtube.com/embed/lF9JY7NVBVk?si=fhDYjDGO7WLeQjcM" style="margin:auto; margin-top: 30px" title="YouTube video player" width="560">
+    </iframe>
+   </div>
+   <div class="media-video-large">
+    <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" frameborder="0" height="440" src="https://www.youtube.com/embed/lF9JY7NVBVk?si=fhDYjDGO7WLeQjcM" style="margin:auto; margin-top: 30px" title="YouTube video player" width="780">
+    </iframe>
+   </div>
    <p>
     ESI manufactures and distributes iron flow batteries that allow large-scale energy storage for wholesale electricity generators, energy retailers, and commercial and industrial (C&amp;I) customers.
    </p>
