--- a/maryborough.html
+++ b/maryborough.html
@@ -352,6 +352,7 @@
       <span class="prev banner-button event-button" onclick="plusSlide(-1)">
        ❮
       </span>
+      <img alt="Maryborough Timelapse Camera 3" class="event-slide" src="/images/ESI-Maryborough-site-update-3_11.11.24.jpg"/>
       <img alt="Maryborough Timelapse Camera 1" class="event-slide" src="/images/ESI-Maryborough-site-update-2_22.10.24.jpg"/>
       <img alt="Maryborough Timelapse Camera 2" class="event-slide" src="/images/ESI-Maryborough-site-update-1_10.10.24.jpg"/>
       <span class="next banner-button event-button" onclick="plusSlide(1)">
@@ -363,6 +364,8 @@
        <span class="event-dot" onclick="currentSlide(1)">
        </span>
        <span class="event-dot" onclick="currentSlide(2)">
+       </span>
+       <span class="event-dot" onclick="currentSlide(3)">
        </span>
        </span>
      </div>
