--- a/maryborough.html
+++ b/maryborough.html
@@ -346,7 +346,7 @@
       The iron flow batteries manufactured in Maryborough will enable large-scale energy storage for wholesale electricity generators, energy retailers, and commercial and industrial customers.
      </p>
      <p>
-      Follow our construction progress via the timelapse gallery below, updated fortnightly to showcase construction milestones at Australia’s first manufacturing plant for grid-scale batteries.
+      Follow our construction progress via the timelapse gallery below, updated to showcase the construction milestones at Australia’s first manufacturing plant for grid-scale batteries.
      </p>
      <div class="slide-container" style="margin-left: auto; margin-right: auto">
       <span class="prev banner-button event-button" onclick="plusSlide(-1)">
